--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,40 @@ body {background-color: #f5f1e5;}
          height: 80px;
          font-size: 25px;
          padding: 20px;
-         border-radius: 5%;
+         border-radius: 2%;
          }
-.tgm {  color:#337044; }
+.tgm {  color:#337044;
+      font-weight: 500px; }
+
+.square {transition:back }
+
+.square:hover { background-color: #337044;
+   }
+.tgm:hover {color: white; }
+.text {   flex-direction: column;
+          align-items: center;
+          text-align: center;
+          width: 200px;
+          font-size: 20px;  
+          margin-top: 20px;
+          margin-left: 100px;   
+      }
+.line1 {margin-top: 20px;
+       }
+.line3 {margin-bottom: 40px;}
+.text p {color: grey;}
+.bread-img {margin-top: 40px;
+  margin-bottom: 40px;
+}
+.bread {max-width: 300px;}
+.ADD {margin-bottom: 20px;}
+.red-div {background-color: red;
+  width: 110px;
+  height: 110px;
+           border-radius: 50px;
+          text-align: center;
+        display: flex;
+      justify-content: center;
+    text-align: center;}
+.t-mich {color: white;
+        font-weight: 500px;}
